@@ -1,3 +1,9 @@
+2014-09-09 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVReader.h
+	* DBCSVReader.m
+	Fix header parsing further, remove redundant method.
+
 2014-09-08 Riccardo Mottola <rm@gnu.org>
 
 	* DBCSVReader.h
